# shapeguard

./: README.org  mypy.ini  pyproject.toml
shapeguard/: __init__.py  dim_specs.py  exception.py  guard.py  interface.py  parser.py  patch.py  shape_spec.lark  shape_spec.py  tools.py  utils.py
shapeguard/shims/: __init__.py  list.py  np.py  pytorch.py  shim.py  tensorflow.py  tf.py  tfp.py
tests/: test_guard.py  test_interface.py  test_match.py
