[tool.poetry]
name = "shapeguard"
version = "0.1.0"
description = "ShapeGuard is a tool to help with handling shapes in Tensorflow."
authors = ["Venky Iyer <indigoviolet@gmail.com>", "Klaus Greff <klaus.greff@startmail.com>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
repository = "https://github.com/indigoviolet/shapeguard"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = {version = "^2.3.1", extras = ["tensorflow"]}
numpy = {version = "*", extras = ["numpy"]}
tensorflow-probability = {version = "^0.11.1", extras = ["tensorflow"]}
torch = {version = "^1.7.0", extras = ["pytorch"]}
lark-parser = "^0.11.1"


[tool.poetry.dev-dependencies]
black = "^19.3b0"
pytest = "^5.0"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
